tm_clock_logic_testexe = executable(
    'tm_clock_logic_test'
    , ['main.cpp', 'FacilityLogic.cpp']
    , include_directories: inc
    , dependencies: common_deps
)
executable(
    'timeout_test'
    , ['timeout_test.cpp']
    , include_directories: inc
    , dependencies: common_deps
)
executable(
    'clock_stop_test'
    , ['ClockStopTest.cpp']
    , include_directories: inc
    , dependencies: common_deps
)
