executable(
    'shift_test'
    , ['ShiftTest.cpp']
    , include_directories: inc
    , dependencies: common_deps
)
executable(
    'synchronizer2_test'
    , ['Synchronizer2Test.cpp']
    , include_directories: inc
    , dependencies: common_deps
)
executable(
    'two_runner_test'
    , ['TwoRunnerTest.cpp']
    , include_directories: inc
    , dependencies: common_deps
)