executable(
    'shift_test'
    , ['ShiftTest.cpp']
    , include_directories: inc
    , dependencies: common_deps
)
executable(
    'synchronizer2_test'
    , ['Synchronizer2Test.cpp']
    , include_directories: inc
    , dependencies: common_deps
)
executable(
    'two_runner_test'
    , ['TwoRunnerTest.cpp']
    , include_directories: inc
    , dependencies: common_deps
)
executable(
    'keyed_update_generator_test'
    , ['KeyedUpdateGeneratorTest.cpp']
    , include_directories: inc
    , dependencies: common_deps
)
executable(
    'remove_duplicates_test'
    , ['RemoveDuplicatesTest.cpp']
    , include_directories: inc
    , dependencies: common_deps
)
executable(
    'delay_test'
    , ['DelayTest.cpp']
    , include_directories: inc
    , dependencies: common_deps
)