executable(
    'shift_test'
    , ['ShiftTest.cpp']
    , include_directories: inc
    , dependencies: common_deps
)
executable(
    'synchronizer2_test'
    , ['Synchronizer2Test.cpp']
    , include_directories: inc
    , dependencies: common_deps
)
executable(
    'two_runner_test'
    , ['TwoRunnerTest.cpp']
    , include_directories: inc
    , dependencies: common_deps
)
executable(
    'keyed_update_generator_test'
    , ['KeyedUpdateGeneratorTest.cpp']
    , include_directories: inc
    , dependencies: common_deps
)
executable(
    'remove_duplicates_test'
    , ['RemoveDuplicatesTest.cpp']
    , include_directories: inc
    , dependencies: common_deps
)
executable(
    'delay_test'
    , ['DelayTest.cpp']
    , include_directories: inc
    , dependencies: common_deps
)
executable(
    'ku_seq_test'
    , ['KUSeqTest.cpp']
    , include_directories: inc
    , dependencies: common_deps
)
executable(
    'deliberate_cycle_test'
    , ['DeliberateCycleTest.cpp']
    , include_directories: inc
    , dependencies: common_deps
)
executable(
    'tuple_2_variant_test'
    , ['Tuple2VariantTest.cpp']
    , include_directories: inc
    , dependencies: common_deps
)
executable(
    'timestamped_collection_test'
    , ['TimestampedCollectionTest.cpp']
    , include_directories: inc
    , dependencies: common_deps
)