executable(
    'rpc_example_server'
    , ['RpcServer.cpp']
    , include_directories: inc
    , dependencies: [common_deps]
)
executable(
    'rpc_example_client'
    , ['RpcClient.cpp']
    , include_directories: inc
    , dependencies: [common_deps]
)
executable(
    'rpc_example_sim_client'
    , ['RpcSimClient.cpp']
    , include_directories: inc
    , dependencies: [common_deps]
)
executable(
    'rpc_example_async_client'
    , ['RpcAsyncClient.cpp']
    , include_directories: inc
    , dependencies: [common_deps]
)