executable(
    'websocket_server'
    , ['Server.cpp']
    , include_directories: inc
    , dependencies: [common_deps]
)
executable(
    'websocket_server_with_auth'
    , ['ServerWithAuthentication.cpp']
    , include_directories: inc
    , dependencies: [common_deps]
)
executable(
    'websocket_client'
    , ['Client.cpp']
    , include_directories: inc
    , dependencies: [common_deps]
)
executable(
    'websocket_client_with_auth'
    , ['ClientWithAuthentication.cpp']
    , include_directories: inc
    , dependencies: [common_deps]
)
executable(
    'websocket_facility_server'
    , ['FacilityServer.cpp']
    , include_directories: inc
    , dependencies: [common_deps]
)
executable(
    'websocket_facility_client'
    , ['FacilityClient.cpp']
    , include_directories: inc
    , dependencies: [common_deps]
)
executable(
    'lazy_importer_test'
    , ['LazyImporterTest.cpp']
    , include_directories: inc
    , dependencies: [common_deps]
)