tm_simple_demo_chain_version_common_info_lib = static_library(
    'tm_simple_demo_chain_version_common_info'
    , ['CommonInfo.cpp']
    , include_directories: [inc]
    , dependencies: [common_deps]
)

subdir('data_source')
subdir('calculator')
subdir('main_logic')
subdir('single_pass')
subdir('place_request')
subdir('print_chain')
subdir('transcribe_chain')
subdir('enable_server')
subdir('enable_client')